# patent-research-mcp

./: .gitignore  .pre-commit-config.yaml  Architecture.md  CHANGELOG.md  CLI-Reference.md  CONTRIBUTING.md  Dockerfile  Home.md  LICENSE  MCP-Tools-Reference.md  Makefile  Plugin-Development.md  Plugin-System.md  Quick-Start.md  README.md  _Sidebar.md  crawl4ai-0.9.0-py3-none-any.whl  debug_plugin.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
docs/adr/: 0001-record-architecture-decisions.md  README.md
docs/wiki/: CLI-Reference.md  Plugin-System.md  _Footer.md
examples/: mcp_client.py
plugins/: README.md  __init__.py
plugins/example/: patents.json  plugin.json
plugins/example/prompts/: custom_analysis.md
prompts/: architecture_synthesizer.md  claims_firewall.md  patent_extractor.md  pattern_synthesizer.md
src/patent_research_mcp/: __init__.py  exporter.py  extractor.py  normalizer.py  patents.py  probe.py  prompts.py  registry.py  schemas.py  seed.py  server.py  store.py
tests/: test_e2e.py  test_e2e_plugin.py  test_live.py  test_normalizer.py  test_resilience.py  test_schemas.py  test_store.py
