[project]
name = "patent-research-mcp"
version = "0.1.0"
description = "MCP server for patent research and enterprise architecture pattern extraction"
requires-python = ">=3.11"
authors = [{ name = "the target system" }]

dependencies = [
    "patent-research-mcp @ file://localhost/home/ciclo/Proyectos/patent-research-mcp",
    "playwright",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
patent-research = "patent_research_mcp.server:cli_app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]